# TIRPAN

./: .env.example  .gitignore  DESIGN.md  LICENSE  README.md  README.tr.md  SPRINT.md  _check_js.py  config.py  main.py  manage.py  nikto_http_192.168.56.101_2026-03-22-12-35-50.txt  pyproject.toml  requirements.txt
.claude/: launch.json  settings.local.json
core/: agent.py  agent_model_config.py  artifact_store.py  base_agent.py  brain_agent.py  chat_agent.py  debug_logger.py  generic_tools.py  llm_client.py  llm_parser.py  memory.py  message_bus.py  mission_context.py  platform_utils.py  playbook.py  prompts.py  pty_manager.py  registry_builder.py  safety.py  secure_store.py  session_data_recovery.py  session_orchestration.py  session_tracer.py  shell_manager.py  soul_loader.py  targeting.py  tool_registry.py  training_data.py
data/: .credkey  aegis.db  consol_output.md  playbook.jsonl
database/: db.py  knowledge_base.py  repositories.py  schema.sql  sqlite_conn.py
defense/: __init__.py  attacker_profiler.py  defense_agent.py  defense_session.py  detector.py  monitor.py  predictor.py  prompts.py
docs/: 01_XBOW_COMPARISON.md  02_ARCHITECTURE.md  03_PREREQUISITES.md  04_ROADMAP.md  05_SAFETY_AND_LEGAL.md  06_LEARNING_CURRICULUM.md  07_NETWORK_DEFENSE_MODULE.md  08_MASTER_CHECKLIST.md  09_PLUGIN_SYSTEM.md  10_LEARNING_ROADMAP.md  11_MULTI_AGENT_SPEC.md  11_V2_FEATURE_SPEC.md  12_LAB_ENVIRONMENT.md  Keywords.txt  Kural‑Uyumlu LLM Tabanlı Otonom Penetrasyon Testi Botu.docx  V2_IMPLEMENTATION_PLAN.md  tablo.xlsx
models/: __init__.py  exploit_result.py  mission.py  scan_result.py  session.py  target.py  vulnerability.py
(+408 files in other folders)
