[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tirpan"
version = "0.1.0"
description = "Autonomous AI-powered penetration testing and network defense platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["pentest", "security", "AI", "agent", "nmap", "metasploit"]

[tool.pytest.ini_options]
asyncio_mode   = "auto"
testpaths      = ["tests"]
python_files   = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts        = "-v --tb=short"
log_cli        = false
log_level      = "WARNING"

[tool.coverage.run]
source   = ["."]
omit     = [
    "tests/*",
    "venv/*",
    ".venv/*",
    "*/site-packages/*",
    "setup.py",
    "main.py",          # entry-point boilerplate
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
show_missing = true
skip_empty   = true

[tool.black]
line-length    = 100
target-version = ["py311", "py312", "py313"]
skip-string-normalization = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # line too long — handled by black
    "B008",   # do not perform function calls in default arguments
    "UP007",  # use X | Y for union type hints (keep Optional for 3.11 compat)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]   # allow assert in tests
